# technical-documentation-knowledge-graph

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: format_check.yaml  type_check.yaml
dashboard/: first_export.json
data/processed/: fastapi_intro_raw.json  fastapi_intro_valid.json
data/raw/: fastapi_intro.txt
owl/: ontology.ttl
src/: extract.py  load_graphdb.py  load_neo4j.py  ontology.py  settings.py  validate.py
